--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,49 +1,43 @@
 ---
-title: 由于奥米克戎变体的传播，全球取消了数千个航班
+title: 英国收到中共病毒严重打击，确诊人数连创新高
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795236/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795243/)
 
 拟稿：金生水
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23-3.png)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23-1.jpg)
 图片来自网络
 
-澳媒《ABC News》近日报道，在圣诞节周末受到中共病毒的高度传染性的奥米克戎变体的打击之后，仅在周日这一天全球就取消了 2200 趟航班。
+据《天空新闻》近日报道，最新的每日数据显示，英国已记录了 122186 例新的中共病毒病例和 137 例死亡病例。
 
-由于机组人员和地勤人员生病或被隔离，汉莎航空、达美航空、联合航空、捷蓝航空、英国航空、阿拉斯加航空和其他几家航空公司被迫取消航班。
+这是自中共病毒大流行开始以来报告的新感染人数最多的一次。 昨天，在记录呈阳性的 28 天内，有 119789 例病例和 147 例死亡。
 
-从周五到周日，约有 7500 架航班停飞，还有数万架航班延误，这是一年中最繁忙的旅行时期之一。
+7天前有93045例病例和111例死亡。
 
-据航班追踪系统 FlightAware 称，这种影响已经在全球范围内蔓延，预计这种伤害将延续到下一个工作周，周一至少有 735 趟航班面临取消，周二还有 160 趟航班面临取消。
+英国卫生与安全局 (UKHSA) 报告了另外 23719 例感染，这意味着现在总数为 114625例。
 
-同时恶劣的天气加剧了美国的旅行混乱，风暴袭击了该国的西部。
+周四又进行了 605561 次新冠疫苗加强针接种，总数达到 32290487 次，占 12 岁及以上人口的 56.1%。
 
-据 FlightAware 报道，商业航空公司在周日（当地时间）取消了 720 多趟美国国内和国际航班。
+英国卫生与安全局负责人珍妮·哈里斯博士表示，在节日期间需要谨慎对待中共病毒数据，因为它“可能无法提供特别真实的情况”。
 
-这比圣诞节那天的近 1000 人略有下降，但与平安夜的水平大致相同，并且可能会进一步取消。
+圣诞节和节礼日将不会有官方更新。
 
-圣诞节假期通常是旅行的高峰期，恰逢奥米克戎变体的快速传播。
+科学咨询小组 SAGE 表示，在其最新的会议纪要中，“增长率明显放缓”。
 
-美国许多地区的感染率急剧上升，纽约州卫生部门警告说，自 12 月 5 日开始的那一周以来，18 岁以下儿童的中共病毒住院人数“惊人地”增加了四倍。
+但它警告说：“圣诞节周末之前测试行为的变化也是一个可能的因素，在这种情况下，它可能不是真正的放缓。”
 
-随着感染人数激增，航空公司被迫取消飞行员和机组人员需要隔离的航班。
+与此同时，英国国家统计局表示，上周全英国估计有 170 万人感染了中共病毒。
 
-一位发言人表示，联合航空公司周日取消了 98 趟航班，并补充说，这仍然是平均每天 4000 趟航班的一小部分。
+其数据涵盖了在截至 12 月 19 日的一周内在医院外或护理机构外检测出中共病毒呈阳性的人。
 
-“这是出乎意料的，”美联航发言人麦迪金在谈到奥米克戎对人员配置的影响时说。
+在英格兰，那一周有 150 万人感染了这种病毒，相当于每35 人中就有1人感染病毒。
 
-美国航空公司的一位发言人表示，圣诞节取消的原因是员工因中共病毒而请病假。
+这一数字在伦敦最高，在那里检测到奥米克戎变体的大多数病例，比例为每20 人中的 1 人。
 
-一位白宫官员表示，尽管一些机场很乱，但“我们的处境比去年圣诞节要好”，并指出“只有一小部分航班受到影响”。
-
-根据路透社的统计，过去一周，美国新冠病毒病例的平均每天增加 45%，达到 179000 例。
-
-虽然最近的研究表明，与之前的变体相比，奥米克戎产生的疾病更轻，住院率更低，但卫生官员保持谨慎的态度，并表示关于该变体还有很多有待了解。
-
-中共病毒几乎对全球的航空公司打击至崩溃。根据郭先生的爆料，中共在明年仍然会释放新的病毒，航空业在明年会受到更加严峻的挑战，同时热爱旅行和需要出行的人们也将会继续被禁足在家。如果不能铲除中共及其背后的黑暗势力，全球将永无宁日。
+新冠疫苗打得越多，病例越创新高。病例越创新高，新冠疫苗就越打得多。究竟要付出多少代价大家才会意识到新冠疫苗根本无法防止病毒的传播，反而会使人更容易感染中共病毒。衷心的希望所有的正义人士都能站出来抵制新冠疫苗，将这次新冠疫苗灾难带给老百姓的伤害尽可能的降到最低。
 
 参考链接：
 
-[Thousands of flights cancelled across globe amid spread of Omicron COVID variant](https://www.abc.net.au/news/2021-12-27/thousands-of-flights-cancelled-due-to-omicron-spread/100726466)
+[COVID-19: UK records 122,186 new coronavirus cases and further 137 deaths](https://news.sky.com/story/covid-19-uk-records-122186-new-covid-cases-and-further-137-deaths-12503513)
 
 [【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
 ![此图像的alt属性为空；文件名为澳喜图标2-1-3.jpg](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%BE%B3%E5%96%9C%E5%9B%BE%E6%A0%872-1-3.jpg)
