--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,19 +1,41 @@
 ---
-title: 被中共病毒阻挡的亲情
+title: 明面整治明星网红，背后习近平与上海帮政治内斗
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795025/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1795032/)
 
-作者：东京樱花团丨阿恩
-![](https://lh3.googleusercontent.com/bqQGMwb6ebPHHGk-vNl7MmZqptk09QjlLdGfjjjJzP1oSgwilVcp-UUAOPpbaFfAoK3_5l6f-cX9QaVbj_PDanz19sgflEqQyJeSIsYOTW6-bLtkDsR7tmw6gX9T1jNdFo-UWT3-)
-本港新冠肺炎出现首宗无外游的Omicron确诊个案，北上免检疫通关无期，港人返内地仍需检疫21日。农历新年将至，已有大批市民经深圳湾口岸北上，出现长长人龙。有学生向学校告长假提早与家人返深圳过年。其母解释，忧小区爆发影响出入境政策，故决定提早带小朋友北上。
+作者：顺其自然
+编辑：文泓
+![](https://assets.gnews.org/wp-content/uploads/2021/12/1-332.png)图片来源：墨尔本雅典娜农场设计组
+在美国时间12月25日大直播，郭先生主要是与爆二代聊天，主题关于生活、哲学、婚姻、信仰和孩子教育，在这里就不作赘述。在直播中，郭先生爆了一个料，“明星台前有多风光，背后就有多卑微”。
 
-爆料革命郭文贵先生多次向全球预警中共将在年底释放新病毒，如今Omicron病毒如期在全球传开，连中共统治下的香港也不能幸免。港府之前高调宣传通关在即，要求港人加强注射新冠疫苗，安装“安心出行”跟踪程序，现在又因Omicron病毒的出现而计划推后通关。中共病毒已经令中港两地封锁了近两年，两地严格而昂贵的隔离措施让人望而生畏，亲人间的联络只能依靠网络。而港府正是利用两地血浓于水的亲情编造通关谎言，骗港人接二连三地注射新冠毒疫苗，不少人没有等到通关已经命丧黄泉。郭文贵先生警告中共还会继续释放病毒，这预示着港府的通关大计将不断推后，中共一日不灭，中港两地定难水乳交融。
+在亚洲娱乐界，韩国有四大家族，日本有三大帮派，台湾有黑帮杨登魁的八大电视，香港有林建岳（丽新集团）、杨受成（英皇集团）、向华强（中国星集团）。所有台湾和香港艺人只能选择跟随各个黑社会组织，与大流氓中共合作。
 
-资料来源：[**通关无期｜学生请长假北上检疫等过年  家长：等通关，等唔到**](https://www.hk01.com/%E7%A4%BE%E6%9C%83%E6%96%B0%E8%81%9E/716979/%E9%80%9A%E9%97%9C%E7%84%A1%E6%9C%9F-%E5%AD%B8%E7%94%9F%E8%AB%8B%E9%95%B7%E5%81%87%E5%8C%97%E4%B8%8A%E6%AA%A2%E7%96%AB%E7%AD%89%E9%81%8E%E5%B9%B4-%E5%AE%B6%E9%95%B7-%E7%AD%89%E9%80%9A%E9%97%9C-%E7%AD%89%E5%94%94%E5%88%B0)
+关于王力宏，郭先生道出了背后的实情。王力宏由台湾黑帮杨登魁扶植出道，后与香港黑帮向华强联合，后来王力宏不负众望一路大红，杨登魁又把他交付给大陆的安全部，由公安部一局局长林强培养起来。
 
-*校对：东京樱花团 / 文小白*
-*发布：东京樱花团 / 平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+最重要的，王力宏当年在大陆发展的时候，无意中得罪过两个可以决定他的命运的人。在大陆演出时他竟然与彭丽媛、宋祖英发生过冲突，得罪了两任“国母”，后来经曾庆淮出面才摆平。因为大陆的演艺圈背后老板是曾庆淮。
+
+现在习处理王力宏、吴亦凡等曾家势力控制的明星，矛头对准的却是背后的大佬曾庆红、曾庆淮。所以，无数的明星还会受到曾庆淮的牵连，凡是曾庆淮势力培养的明星统统都要灭，以曾庆淮为靠山、杨登魁培养的明星统统也都要被灭。而最近中国网红界也被大力整治，缘由是孟建柱、孙立军控制网红界，他俩又是江家人、曾家人，所以网络红人们也统统都要被灭。
+
+曾几何时，在北京盘古四合院，王姓女天王和香港的十几个大咖在吃完一两百万美元一盒的鱼子酱后，衣不遮体、神智不醒、淫乱至极、白粉满地……演艺圈染指毒品是因为空虚寂寞，参与赌博是因为缺乏定力和难以抵挡金钱的诱惑。毒和赌都是背后的黑帮大佬所设置控制艺人的枷锁。所有台湾、香港的歌星都是权贵和富豪的玩物，没人要了再抛到社会上去，包括徐小凤、邓丽君和高胜美。
+
+我们普通人都知道演艺圈是黑帮控制的，曾家、尤其是曾庆淮控制港澳台和大陆的娱乐圈，但是我没有想到，王力宏和他妻子李靓蕾的互撕，竟然与彭丽媛有关，还与习近平家族与曾家政治斗争有关。王力宏因曾拒绝演出，弄这么一出，这彭国母比当年的江青有过之无不及。网友都以为李靓蕾与王力宏的互撕只是家事，只是因为争财产，没想到夫妻互撕的家庭事件背后竟然有着不可言状的秘密。其中牵扯到中共最大两大派系的你死我花的内斗。这水也太深了吧，绝对出乎我的意料。
+
+薇娅巨额补交税款这事，我觉得背后还是有一些玄机的，不可能只是因为偷税漏税问题，只是没想到网红竟然是孟建柱控制的产业。现在看来，只要是挣钱的产业，没有他们不控制的。本人对薇娅的印象非常好，因为看过她一路走来的故事，特别佩服她的能力、果断、敢闯的性格。估计是做直播有了一定的名气以后，就被孟建柱的资本盯上了，开始大力打造培养她，给她巨大的流量，有了流量和粉丝，那供应商自然而然找到她。原本以为薇娅只是借助于粉丝流量打压供应商，把供应商的价格压得极低，甚至逼的供应商亏本供货给他们，如此一来让顶级主播盆满钵满，却逼死了众多的小商户。现在习近平出手收拾直播网红，起初以为，一是中共财政没钱了，要从他们身上弄钱，以充实财政；二是打击顶级主播后，流量会给到中小商家，从而稳定中小企业和就业。现在看来，不能说没有这方面的原因，但更大的原因竟然是为了内部政治斗争，主要服务于打击曾家，孟建柱控制的娱乐圈和网红产业。
+
+我们才知道，中共国拍电影电视最主要的功能是洗钱，曾家、孟家势力应该没少借助娱乐圈来洗钱。现在看来，不止娱乐圈，这些个顶级网红主播应该也是他们洗钱的工具，否则薇娅怎么可能一两年的时间就赚上百亿？这里面有多少是洗钱的资金就不为外人所知了。
+
+现在习主席和彭副主席多面出击，对娱乐圈、网红直播大加整肃，要将所有原来由曾孟控制的产业全部拿到自己的手中。如此看来，之前风光无限的，无论是一流还是二流的，还有顶级的演艺明星，将来的结局或者被整肃，或者渐渐的消失，然后换上由习家人控制的一批演艺明星再上去。如若某些明星自愿加入到习家阵营，还是能留个活路的。但现在是习近平与曾家、孟建柱较量正酣之时，谁能知道最后哪方胜利呢？这个选择还是挺难的，一不小心他们就成立政治斗争的牺牲品。所以，中共治下，演艺圈明星、网红主播们未来也不会有好的前景。
+
+油管视频资料来源：[闲聊澳洲 – YouTube](https://www.youtube.com/channel/UCPxB0vpNpmHN0hORXK4gj2A)
+
+发布：去中心化Math
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
