--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,37 +1,49 @@
 ---
-title: 中共批准腾盛的新冠鸡尾酒疗法用于成人和青少年
+title: 由于奥米克戎变体的传播，全球取消了数千个航班
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795231/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795236/)
 
 拟稿：金生水
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23-3.png)
 图片来自网络
 
-路透社近日报道，中共国医疗产品监管机构周三表示，已批准将腾盛博药的中和抗体混合物用于治疗中共病毒，这是该国首个针对该病毒的此类治疗方法。
+澳媒《ABC News》近日报道，在圣诞节周末受到中共病毒的高度传染性的奥米克戎变体的打击之后，仅在周日这一天全球就取消了 2200 趟航班。
 
-腾盛博药在一份报告中说，根据三期临床试验的最终结果，BRII-196/BRII-198 的组合显示，在非住院中共病毒患者中，有发生严重疾病的高风险的住院和死亡减少了 80%。
+由于机组人员和地勤人员生病或被隔离，汉莎航空、达美航空、联合航空、捷蓝航空、英国航空、阿拉斯加航空和其他几家航空公司被迫取消航班。
 
-中共国家药品管理局说批准腾盛的药物用于治疗成人中共病毒轻症和12-17岁未成年人住院或死亡风险高的“正常类型”疾病。
+从周五到周日，约有 7500 架航班停飞，还有数万架航班延误，这是一年中最繁忙的旅行时期之一。
 
-腾盛博药首席财务官李安康表示，关于奥米克戎变体如何影响抗体鸡尾酒的结果预计将在大约两周后出来。
+据航班追踪系统 FlightAware 称，这种影响已经在全球范围内蔓延，预计这种伤害将延续到下一个工作周，周一至少有 735 趟航班面临取消，周二还有 160 趟航班面临取消。
 
-腾盛博药股价一度上涨 13.7% 至 48.75 港元（6.25 美元），然后在周四回落至收盘下跌 0.5%。
+同时恶劣的天气加剧了美国的旅行混乱，风暴袭击了该国的西部。
 
-该公司已在美国提交了该治疗的紧急使用申请，其中再生元制药公司和礼来的类似产品已获得批准。
+据 FlightAware 报道，商业航空公司在周日（当地时间）取消了 720 多趟美国国内和国际航班。
 
-博药将与潜在合作伙伴一起在中国和美国以外的地区寻求治疗的监管许可，优先考虑已经开始该产品三期试验的国家，如南非、巴西和墨西哥，李安康在新闻发布会上说。
+这比圣诞节那天的近 1000 人略有下降，但与平安夜的水平大致相同，并且可能会进一步取消。
 
-李安康说，博药还在研究使用该药物预防中共病毒。
+圣诞节假期通常是旅行的高峰期，恰逢奥米克戎变体的快速传播。
 
-该公司表示，在获得批准之前，腾盛博药的治疗方法已在中国近 900 名中共病毒患者中使用。
+美国许多地区的感染率急剧上升，纽约州卫生部门警告说，自 12 月 5 日开始的那一周以来，18 岁以下儿童的中共病毒住院人数“惊人地”增加了四倍。
 
-这款享受中共当局政策绿灯快速获批的特效药待定售价能有8000元，腾盛博药股票也因此药获批上市而大涨，不知道这家公司背后是中共哪个权贵家族？从开始实验室研究到获批上市，这款药居然只用了不到20个月的时间，笔者认为从这个研发速度来看，说它的安全性要打一个大大的问号都算是抬举它了，中共不仅谋财，还要害命啊。
+随着感染人数激增，航空公司被迫取消飞行员和机组人员需要隔离的航班。
+
+一位发言人表示，联合航空公司周日取消了 98 趟航班，并补充说，这仍然是平均每天 4000 趟航班的一小部分。
+
+“这是出乎意料的，”美联航发言人麦迪金在谈到奥米克戎对人员配置的影响时说。
+
+美国航空公司的一位发言人表示，圣诞节取消的原因是员工因中共病毒而请病假。
+
+一位白宫官员表示，尽管一些机场很乱，但“我们的处境比去年圣诞节要好”，并指出“只有一小部分航班受到影响”。
+
+根据路透社的统计，过去一周，美国新冠病毒病例的平均每天增加 45%，达到 179000 例。
+
+虽然最近的研究表明，与之前的变体相比，奥米克戎产生的疾病更轻，住院率更低，但卫生官员保持谨慎的态度，并表示关于该变体还有很多有待了解。
+
+中共病毒几乎对全球的航空公司打击至崩溃。根据郭先生的爆料，中共在明年仍然会释放新的病毒，航空业在明年会受到更加严峻的挑战，同时热爱旅行和需要出行的人们也将会继续被禁足在家。如果不能铲除中共及其背后的黑暗势力，全球将永无宁日。
 
 参考链接：
 
-[China approves Brii Biosciences antibody COVID treatment](https://www.reuters.com/business/healthcare-pharmaceuticals/china-approves-brii-biosciences-covid-19-treatment-2021-12-08/)
-
-[焦点分析 | 中国首个新冠“特效药”获批上市，腾盛博药能否成为抗感染巨头？](https://www.sohu.com/a/506856370_114778)
+[Thousands of flights cancelled across globe amid spread of Omicron COVID variant](https://www.abc.net.au/news/2021-12-27/thousands-of-flights-cancelled-due-to-omicron-spread/100726466)
 
 [【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
 ![此图像的alt属性为空；文件名为澳喜图标2-1-3.jpg](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%BE%B3%E5%96%9C%E5%9B%BE%E6%A0%872-1-3.jpg)
