--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,45 +1,37 @@
 ---
-title: 西安本地官员将因中共病毒爆发封城而受惩罚
+title: 中共批准腾盛的新冠鸡尾酒疗法用于成人和青少年
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795227/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795231/)
 
 拟稿：金生水
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23-2.png)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23.jpg)
 图片来自网络
 
-《雅虎新闻》近日报道，中共当局周五表示，随着新病例数量的下降，在中共病毒爆发导致其 1300 万居民被封锁后，中国西北部城市西安的官员正面临处罚。
+路透社近日报道，中共国医疗产品监管机构周三表示，已批准将腾盛博药的中和抗体混合物用于治疗中共病毒，这是该国首个针对该病毒的此类治疗方法。
 
-所有周五从西安出发的国内航班和大部分出西安出发的火车被取消。西安官员说这次疫情爆发是与从巴基斯坦航班有关。西安以跟中国第一个皇帝一起埋葬的兵马俑而著名。
+腾盛博药在一份报告中说，根据三期临床试验的最终结果，BRII-196/BRII-198 的组合显示，在非住院中共病毒患者中，有发生严重疾病的高风险的住院和死亡减少了 80%。
 
-中央纪律检查委员会在一份声明中说，西安有 26 人因在中共病毒预防和控制工作中“没能做好”而被追究责任，但没有具体说明他们的惩罚。
+中共国家药品管理局说批准腾盛的药物用于治疗成人中共病毒轻症和12-17岁未成年人住院或死亡风险高的“正常类型”疾病。
 
-12 月 23 日，该市出现确诊症状的新本地传播病例从一天前的 63 例降至 49 例，这是自 12 月 10 日以来的首次下降。
+腾盛博药首席财务官李安康表示，关于奥米克戎变体如何影响抗体鸡尾酒的结果预计将在大约两周后出来。
 
-从周四开始，每个西安家庭每两天只能派一个人去购买必需品，其他人除非有必要的工作，否则不得离开。
+腾盛博药股价一度上涨 13.7% 至 48.75 港元（6.25 美元），然后在周四回落至收盘下跌 0.5%。
 
-西安已启动多轮大规模测试。
+该公司已在美国提交了该治疗的紧急使用申请，其中再生元制药公司和礼来的类似产品已获得批准。
 
-**严厉的措施**
+博药将与潜在合作伙伴一起在中国和美国以外的地区寻求治疗的监管许可，优先考虑已经开始该产品三期试验的国家，如南非、巴西和墨西哥，李安康在新闻发布会上说。
 
-虽然西安的本地有症状病例的数量，12 月 9 日至 12 月 23 日期间为 255 例。与中国其他地方的爆发相比，总体上很小，但当局采取了严厉措施，在很大程度上成功地防止了局部爆发扩散。
+李安康说，博药还在研究使用该药物预防中共病毒。
 
-随着北京准备在 2 月份举办冬季奥运会，中共国尤其决心扑灭任何疫情。
+该公司表示，在获得批准之前，腾盛博药的治疗方法已在中国近 900 名中共病毒患者中使用。
 
-该国几乎对国际入境者关闭了边境，那些前来参加奥运会的人将被隔离在一个严格执行的“闭环”中。
-
-中国积极的抗击新冠病毒的方法抑制了国内旅行和消费者支出，并偶尔导致局部工业中断。
-
-周五，电动汽车制造商比亚迪的一名公司代表表示，其在西安的业务被封锁对其造成了“一些影响”。
-
-中国卫生部门周五表示，在全国范围内，中国在 12 月 23 日确认了 87 例新的有症状病例，低于一天前的 100 例。根据国家卫生委员会的一份声明，其中 55 例是本地传播的，而一天前为 71 例。
-
-没有新的死亡病例，死亡人数为 4636 人。截至 12 月 23 日，中国大陆有 100731 例确诊的中共病毒病例。
-
-中共一味追求的“零病例”政策加剧了中央和地方的矛盾，严重伤害西安本地百姓的同时还要把病毒爆发封城的责任推到地方官员上去。西安的疫情爆发罪魁祸首其实是中共及其背后的黑暗势力强推新冠疫苗导致的“出血热”，而不是中共官媒宣传的地方官员“抗疫不力”。地方官员需要尽早醒悟不再为中共卖命，否则随时可能成为疫情清零政策下的替罪羊。
+这款享受中共当局政策绿灯快速获批的特效药待定售价能有8000元，腾盛博药股票也因此药获批上市而大涨，不知道这家公司背后是中共哪个权贵家族？从开始实验室研究到获批上市，这款药居然只用了不到20个月的时间，笔者认为从这个研发速度来看，说它的安全性要打一个大大的问号都算是抬举它了，中共不仅谋财，还要害命啊。
 
 参考链接：
 
-[Chinese officials punished over COVID outbreak that led to Xian lockdown](https://au.news.yahoo.com/chinese-officials-punished-over-covid-120330690.html)
+[China approves Brii Biosciences antibody COVID treatment](https://www.reuters.com/business/healthcare-pharmaceuticals/china-approves-brii-biosciences-covid-19-treatment-2021-12-08/)
+
+[焦点分析 | 中国首个新冠“特效药”获批上市，腾盛博药能否成为抗感染巨头？](https://www.sohu.com/a/506856370_114778)
 
 [【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
 ![此图像的alt属性为空；文件名为澳喜图标2-1-3.jpg](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%BE%B3%E5%96%9C%E5%9B%BE%E6%A0%872-1-3.jpg)
