--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,37 +1,45 @@
 ---
-title: 特鲁多称西方国家需要团结起来对抗中国
+title: 西安本地官员将因中共病毒爆发封城而受惩罚
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795205/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795227/)
 
-撰稿人：小湫
-
-以下内容翻译自Fox新闻网
-
-[加拿大](https://www.foxnews.com/category/world/world-regions/canada)总理贾斯汀·特鲁多恳请西方国家团结起来反抗[中国，](https://www.foxnews.com/category/world/world-regions/china)称中国政府经常在西方各个国家之间制造矛盾，造成彼此对抗。
-![](https://assets.gnews.org/wp-content/uploads/2021/12/AP21019635452381-24.jpeg)
+拟稿：金生水
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23-2.png)
 图片来自网络
 
-特鲁多[在接受环球电视台采访时说，](https://www.reuters.com/world/western-states-need-united-front-against-divisive-china-trudeau-2021-12-25/)我们需要坦诚的信任和更好的合作，这样中国政府无法在西方国家之间玩弄伎俩，使我们彼此分裂。
+《雅虎新闻》近日报道，中共当局周五表示，随着新病例数量的下降，在中共病毒爆发导致其 1300 万居民被封锁后，中国西北部城市西安的官员正面临处罚。
 
+所有周五从西安出发的国内航班和大部分出西安出发的火车被取消。西安官员说这次疫情爆发是与从巴基斯坦航班有关。西安以跟中国第一个皇帝一起埋葬的兵马俑而著名。
 
+中央纪律检查委员会在一份声明中说，西安有 26 人因在中共病毒预防和控制工作中“没能做好”而被追究责任，但没有具体说明他们的惩罚。
 
-图片来自网络
+12 月 23 日，该市出现确诊症状的新本地传播病例从一天前的 63 例降至 49 例，这是自 12 月 10 日以来的首次下降。
 
-中国政府经常以中国的庞大市场作为诱饵，让西方国家彼此竞争成为对手。
+从周四开始，每个西安家庭每两天只能派一个人去购买必需品，其他人除非有必要的工作，否则不得离开。
 
-近年来，加拿大与中国的关系一直紧张，最为引人注目的事情，是中国公民华为首席财务官孟晚舟于 2018 年在温哥华国际机场因美国引渡令而被捕。中国不久后拘留了两名加拿大人，这是对加拿大拘捕孟晚舟行为的恶意报复。
+西安已启动多轮大规模测试。
 
-孟最终于 9 月与美国检察官达成协议，中国政府才释放了两名加拿大国民。
+**严厉的措施**
 
-加拿大也一直强烈批评中国的人权问题，与其他西方国家一道，对2022年2月的北京冬季奥运会进行了外交抵制。
+虽然西安的本地有症状病例的数量，12 月 9 日至 12 月 23 日期间为 255 例。与中国其他地方的爆发相比，总体上很小，但当局采取了严厉措施，在很大程度上成功地防止了局部爆发扩散。
 
-中国政府并没有接受这一抵制，反而声称，抵制他们的人违反了《奥林匹克宪章》确立的体育运动政治中立原则，与奥林匹克“更加团结”的格言背道而驰。
+随着北京准备在 2 月份举办冬季奥运会，中共国尤其决心扑灭任何疫情。
 
-在美国宣布外交抵制后，中国外交部发言人赵立坚表示，“美方将为自己的做法付出代价，请关注后续行动”。
+该国几乎对国际入境者关闭了边境，那些前来参加奥运会的人将被隔离在一个严格执行的“闭环”中。
 
-信息来源：
+中国积极的抗击新冠病毒的方法抑制了国内旅行和消费者支出，并偶尔导致局部工业中断。
 
-[Trudeau says western countries need to stand together against China](https://www.foxnews.com/world/trudeau-says-western-countries-need-to-stand-together-against-china)
+周五，电动汽车制造商比亚迪的一名公司代表表示，其在西安的业务被封锁对其造成了“一些影响”。
+
+中国卫生部门周五表示，在全国范围内，中国在 12 月 23 日确认了 87 例新的有症状病例，低于一天前的 100 例。根据国家卫生委员会的一份声明，其中 55 例是本地传播的，而一天前为 71 例。
+
+没有新的死亡病例，死亡人数为 4636 人。截至 12 月 23 日，中国大陆有 100731 例确诊的中共病毒病例。
+
+中共一味追求的“零病例”政策加剧了中央和地方的矛盾，严重伤害西安本地百姓的同时还要把病毒爆发封城的责任推到地方官员上去。西安的疫情爆发罪魁祸首其实是中共及其背后的黑暗势力强推新冠疫苗导致的“出血热”，而不是中共官媒宣传的地方官员“抗疫不力”。地方官员需要尽早醒悟不再为中共卖命，否则随时可能成为疫情清零政策下的替罪羊。
+
+参考链接：
+
+[Chinese officials punished over COVID outbreak that led to Xian lockdown](https://au.news.yahoo.com/chinese-officials-punished-over-covid-120330690.html)
 
 [【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
 ![此图像的alt属性为空；文件名为澳喜图标2-1-3.jpg](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%BE%B3%E5%96%9C%E5%9B%BE%E6%A0%872-1-3.jpg)
