--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 1/1/2022 文贵直播：什么是“风”？中国的五行和西方的星座都是人类文明的累积
+title: 1/1/2022 文贵直播：中国和西方文化其实并不冲突，新中国联邦将促进二者交融、取长补短，从而形成更先进的文明
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1815608/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1815642/)
 
 秘密翻译组-北美组
 
