--- a/gnews/36.md
+++ b/gnews/36.md
@@ -1,138 +1,45 @@
 ---
-title: 中共国开发商一月份将面临1970亿美元的支付挑战
+title: 播客超级明星乔-罗根加入盖特——自由的发声平台
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1816863/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1816910/)
 
-![](https://s.yimg.com/ny/api/res/1.2/_NSTB7v5clwhrt4vNbRgTg--/YXBwaWQ9aGlnaGxhbmRlcjt3PTk2MDtoPTU3NjtjZj13ZWJw/https://s.yimg.com/uu/api/res/1.2/QEG2TKdbSKGh6c8800Hsnw--~B/aD03Nzg7dz0xMjk2O2FwcGlkPXl0YWNoeW9u/https://media.zenfs.com/en/bloomberg_markets_842/b2904000eb0f5603f466c7277c8e9854)图片来源：Bloomberg
-雅虎网站《彭博社》2022年01月02日报道：《彭博社》——中共国的房地产开发商有越来越多的账单需要在1月份支付，而筹集必要资金的选择也在减少。
-根据《彭博社》的统计和分析师的估算，该行业将需要找到至少1970亿美元来支付到期债券、息票、信托产品和数百万农民工的欠薪。中共当局已敦促中国恒大集团(Evergrande Group)等开发商在月底前完成工资发放，以避免出现社会动荡的风险。
-尽管中共国在去年12月转向支持经济增长，但房地产市场政策仍然收紧。未来的重点可能是确保房屋交付，该国央行正在鼓励金融公司帮助房地产行业的收购活动。受困的房地产企业本月需要支付的债券金额比2021年11月和12月的总和还要大。
-一月账单的统计包括：
- 工人工资：1.1万亿元人民币(1,730亿美元)，来源野村控股经济学家估算
- 美元债券：本金支付60.4亿美元，息票支付17亿美元，来源彭博汇编的数据
- 在岸票据：本金支付372亿元人民币，息票66亿元人民币，来源彭博汇编数据
- 信托产品：602亿元人民币到期，来源数据追踪机构用益信托(UseTrust)的数据
- 还有本地和离岸债券的利息支付、供应商账单和潜在的隐性债务
+作者：纽约香草山农场教育部 – 新生
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+随着推特继续禁止用户使用其平台，播客超级明星乔-罗根周日宣布，他已经设立了一个盖特账户。截止发稿之时，乔-罗根在盖特上已经有了八百万粉丝，当前，他在推特仍有七百八十万粉丝。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-118.png)
+乔-罗根是美国一位知名的脱口秀明星，登台表演已有20多年，拥有众多粉丝，罗根的第六个喜剧特辑《乔-罗根：奇怪的时代》于2018年10月在奈飞（Netflix）首播。根据他个人[网站](https://www.joerogan.com/)的自我介绍，他主持一档播客节目《乔-罗根体验》。这是一个长篇对话节目，嘉宾包括喜剧演员、演员、音乐家、综合格斗选手、作家、艺术家，以及其他人士。自2002年以来，罗根曾在福克斯电视台、付费观看（Pay Per View）、以及斯派克有线电视频道（Spike Television）为终极格斗锦标赛(UFC)担任评论员。罗根还还在两部电影中担任角色，在NBC电视台主持过竞争性真人秀节目《恐惧因素》。
 
-对于规模较小或陷入困境的公司，尚不清楚它们如何筹措钱款。离岸债券收益率如此之高，以至于美元债券市场实际上仍处于关闭状态以进行再融资，汇丰控股有限公司的分析师预测，这种情况将至少持续六个月。最近，只有少数最强大的民营开发商进入了在岸银行间信贷市场，而低股票估值限制了股权融资的范围。
-从疲软的房地产市场中获得更高的收入仍然是一个挑战。此外，像恒大这样的公司一直在努力出售非核心资产。
-陷入困境的开发商的债券票据-56亿美元
-对于那些在“彭博中国高收益美元债券指数”中2021年债券回报收益最差的开发商来说，以下是本地和离岸票据到期利息和本金支付的周历。除非另有说明，一些付款可能有宽限期。
-注：虽然该名单不包括去年违约的公司，但包括恒大和佳兆业集团控股有限公司。这些开发商表示他们正在与债券持有人谈判，但尚未明确未来的付款计划。
-恒大、佳兆业(Kaisa)——16.6亿美元，包括可回售债券
- 恒大2023年到期的45亿元债券将于1月8日回售；也是3.141亿元息票的首次截止日期
- 佳兆业2025年到期的债券票息2,625万美元，首次截止日期为1月15日
- 恒大2023年到期的债券票息5,750万美元，首次截止日期1月22日
- 恒大2024年到期的债券票息6,000万美元，首次截止日期为1月22日
- 佳兆业7月到期的债券票息865万美元，首次截止日期为1月22日
- 佳兆业2023年到期的债券票息4,080万美元，首次截止日期为1月23日
- 佳兆业2025年到期的债券票息2,490万美元，首次截止日期为1月23日
- 恒大下属企业景程(Scenery Journey)10月到期的债券票息1.15亿美元，首次截止日期为1月24日
- 景程2023年到期的债券票息1.2亿美元，首次截止日期为1月24日
- 恒大2023年到期的债券票息5,040万美元，宽限期至1月27日结束
- 恒大2025年到期的债券票息2.048亿美元，宽限期至1月27日结束
- 佳兆业2024年到期的债券票息1.0535亿美元，宽限期至1月29日结束
- 佳兆业2022年到期的债券票息4,875万美元，宽限期至1月29日结束
- 佳兆业2023年到期的债券票息4,025万美元，首次截止日期为1月30日
+“为了防止推特上的狗屎变得更加愚蠢，我现在也在这里。欢呼吧！” 罗根周日下午在他的盖特账户上写道。
 
-第1周(1月1日至7日)–2.34亿美元
- 雅居乐(Agile)2025年到期的债券票息1,440万美元，首次截止日期为1月2日
- 正荣地产(Zhenro)6月到期的债券票息5,750万元，首次截止1月2日(公司发言人表示会按时付款)
- 龙光集团(Logan)1月3日到期的债券票息6,180万美元，外加178万美元利息
- 广州富力地产(Guangzhou R&F)2023年到期的债券票息2.975亿元，首次截止日期1月3日
- 世茂集团(Shimao)7月到期的债券票息2,375万美元，首次截止日期为1月3日
- 力高地产(Redco)2023年到期的债券票息3,180万元，首次截止日期1月6日
- 龙光集团2026年到期的债券票息705万美元的，首次截止日期为1月6日
- 新城发展(Seazen)1月7日到期的债券票息3.1亿元，外加1705万元利息
- 正荣集团2026年到期的债券票息1,300万美元，首次截止日期为1月7日
+罗根最近在他的播客中采访了罗伯特-马龙博士，而马龙博士最近也因为对中共病毒疫苗的立场而被禁止使用推特。罗根告诉马龙博士，“只要你不顺从科技界的任何说法，他们（推特）就可以删除你，因为科技界显然有一个审查议程，当涉及到中共病毒的治疗时，无论你是否在宣传他们所谓的疫苗接种迟疑现象，他们可以为此禁止你，他们可以禁止你，因为在他们眼中，他们认为这是一个正当的罪行。”
 
-第2周（1月8日至14日）——14.2亿美元
- 时代中国(Times China)2025年到期的债券票息1,860万美元，首次截止日期1月8日
- 深圳龙光(Shenzhen Logan)2025年到期的债券票息4,800万元，首次截止日期1月8日
- 上海世茂(Shanghai Shimao)2023年到期的债券票息2,060万美元，首次截止日期1月9日
- 融创(Sunac)2023年到期的债券票息1,950万美元，首次截止日期为1月9日
- 融创2025年到期的债券票息2,100万美元，首次截止日期为1月9日
- 融创2025年到期的债券票息2,410万美元，首次截止日期为1月10日
- 合景泰富(KWG)1月11日到期的债券票息2.5亿美元，外加750万美元利息
- 阳光城(Yango Justice) 1月11日到期的债券票息2,470万美元，外加650,000美元利息
- 世茂2031年到期的债券票息1,500万美元，首次截止日期为1月11日
- 广州富力全资子公司怡略(EasyTactic) 2024年到期的债券票息1,830万美元，首次截止日期1月11日
- 上海宝龙地产(Shanghai Powerlong) 2026年到期的债券票息6,600万美元，首次截止日期1月11日
- 龙光集团2025年到期的债券票息956万美元，首次截止日期为1月12日
- 广州富力全资子公司怡略1月13日到期的债券票息7.25亿美元，外加2080万美元利息（提议延期）
- 正荣全资子公司企业振安荣耀(Zhenro unit ZhenAn Glory) 1月13日到期的债券票息1亿美元，外加260万美元利息
- 世茂2030年到期的债券票息690万美元，首次截止日期1月13日
- 绿城(Greentown) 2025年到期的债券票息848万美元，首次截止日期1月13日
- 绿城2026年到期的债券票息9,800万元，首次截止日期1月13日
- 龙光集团2028年到期的债券票息675万美元，首次截止日期为1月13日
- 弘阳地产(Redsun)2025年到期的债券票息1,280万美元，首次截止日期为1月13日
- 新城集团2025年到期的债券票息668万美元，首次截止日期为1月13日
- 合景泰富集团2027年到期的债券票息1,110万美元，首次截止日期为1月13日
- 禹洲集团(Yuzhou) 2026年到期的债券票息2,380万美元，首次截止日期为1月13日
- 禹洲集团2027年到期的债券票息1,780万美元，首次截止日期1月13日
- 建业住宅集团(Central China) 2025年到期的债券票息975万美元，首次截止日期1月14日
- 龙光集团2025年到期的债券票息863万美元，首次截止日期为1月14日
- 时代中国2027年到期的债券票息1,010万美元，首次截止日期1月14日
+“我非常努力地给人们提供信息，帮助他们思考，而不是告诉他们该想什么。但问题是，如果我不能参与发言，即使指出了可能不方便的科学事实，那么谁可以被允许（发言）？” 马龙后来在谈话中说。
 
-第3周(1月15日至21日)——8.31亿美元
- 上海世茂1月15日到期的债券票息20亿元，外加9,300万元利息
- 世茂2026年到期的债券票息2,800万美元，首次截止日期为1月15日
- 阳光城(YangoJustice)2023年到期的债券票息1,390万美元，首次截止日期为1月15日
- 阳光城2024年到期的债券票息1,340万美元，首次截止日期1月15日
- 新城发展子公司环球新都会(NewMetroGloba)2025年到期的债券票息l,694万美元的，首次截止日期为1月15日
- 世茂2027年到期的债券票息1,300万美元，首次截止日期为1月16日
- 龙光集团2023年到期的债券票息1,300万美元，首次截止日期为1月16日
- 弘阳地产2023年到期的债券票息2,210万美元，首次截止日期为1月16日
- 时代中国2023年到期的债券票息1,690万美元，首次截止日期1月16日
- 建业住宅2024年到期的债券票息725万美元，首次截止日期1月16日
- 上海世茂2023年到期的债券票息2,250万美元，首次截止日期1月19日
- 融创2025年到期的债券票息1.074亿美元，首次截止日期1月19日
- 中国奥园地产(China Aoyuan)1月20日到期的债券票息1.88亿美元，外加393万美元利息
- 上海宝龙(Shanghai Powerlong)已表示将在1月20日支付9.3亿元，以兑现2025票据的认沽期权；6,200万元的债券票息也将到期
+郭先生在昨天的新年直播上指出，盖特自从2021年7月上线以来，总下载量已经达到3500万。盖特目前的用户包括来自美国、巴西、英国、法国、德国、印度、日本、以及爆料革命追随者，正在逐步成长为国际化的社交平台。
 
-第4周(1月22日至31日)——14.6亿美元
- 融信(Ronshine)2023年到期的债券票息1,860万美元，首次截止日期1月22日
- 阳光城2026年到期的债券票息6,900万元，首次截止日期1月22日
- 融创2023年到期的债券票息3,750万元，首次截止日期1月22日
- 绿城2024年到期的债券票息1,990万元，首次截止日期1月22日
- 中国奥园1月23日到期的债券票息5亿美元，外加2,125万美元利息
- 禹洲1月23日到期的债券票息2.421亿美元，外加1,040万美元利息
- 宝龙2023年到期的债券票息1,460万美元，首次截止日期1月23日
- 绿城表示将在1月24日支付4.95亿元人民币，以满足2024年票据的认沽期权
- 禹洲1月25日到期的债券票息3.4745亿美元，外加1,040万美元利息
- 融信2025年到期的债券票息1,065万美元，首次截止日期1月25日
- 宝龙于1月26日到期的债券票息10亿港元(1.282亿美元)，外加3,000万港元利息
- 宝龙7月到期的债券票息400万美元，首次截止日期1月26日
- 融创2026年到期的债券票息1,950万美元，首次截止日期1月26日
- 富力地产子公司怡略将于7月到期的债券票息1,310万美元，首次截止日期为1月28日
- 阳光城2025年到期的债券票息4,010万元，首次截止日期1月29日
- 世茂2025年到期的债券票息1,300万美元，首次截止日期1月30日
+盖特首席执行官杰森-米勒（Jason Miller）表示，该平台将对来自政治任何一端的意见保持开放。“盖特就是思想的自由平台”。米勒在声明中说：“我们不会因为人们的政治观点而噤声他们，盖特提供的功能和技术远远超过其他任何东西”。盖特允许用户选择 “将他们现有的推文导入这个新平台”，此外，还有更长的字符数的帖子，以及更清晰的照片。
 
-**简评**：《彭博社》将2022年1月份中共国房地产开发商需要面临的巨额还款金额全部公示出来，目的是让每一个债权投资人关注及重视起来。我们知道西方的债券是基于相互信任的基础上的信用评级而发行或买卖的。而中共国的各行各业摒弃信用采用欺骗的手段牟利的模式现在已经应用到国际市场上了。按通俗的说法：你（西方社会）贪的是利息，人家（中共）要的是你的本金。中共国开发商的天量借款，随时有爆雷风险，这也给西方社会上了一次活生生的被中共骗的课，同时也会打破西方社会对中共的幻想进而更清楚的认识到中共政权所营造的金融和经济骗局。
-中共国房地产开发商面临海量的巨额债券到期却可能无力偿还的局面，印证了郭文贵先生反复强调并提醒西方社会的一个事实：中共国房地产倒塌，将动摇全球金融市场。更需要引起注意的是，《彭博社》只是列出了房地产类的债券，而在白电领域，通讯领域，互联网概念领域，网游领域等还有多少隐形债务可能爆雷仍未可知。中共金融和经济的崩溃将加速西方社会与中共经济脱钩。
+新闻链接：
+1. [https://thepostmillennial.com/breaking-joe-rogan-joins-gettr-as-twitter-censorship-intensifies](Joe%20Rogan%20joins%20GETTR%20as%20Twitter%20censorship%20intensifies)
+2. [https://www.joerogan.com/](https://www.joerogan.com/)
+3. [https://www.gettr.com/user/joerogan](https://www.gettr.com/user/joerogan)
 
-**息票(Coupon)**:原指旧时的债券票面的一部分，债券持有人可将其剪下，在债券付息日携至债券发行人处要求兑付当期利息。 现在发行的债券多采用电子化形式，但票面利率(coupon rate)仍被用来表示债券的利率。 息票是附印于各种债券面上的利息票券，到付息日期时，凭息票领取利息，证明付款人应支付利息的证明书。
-股票估值(Stock valuation):指的是对一家企业估算其内在的价值，经由估算后的「价值」与企业当前股票的「价格」相互比较，进一步找出「被低估」或「被高估」的企业。因此，假如股价低于企业价值，处于被低估的情况下，投资人就可以考虑进场投资；相反的，假如股价高于企业价值，处于被高估的情况下，就可以卖出股票。股票估值基本可以分为两大类：绝对估值及相对估值。
-Bill一般來說於一年內到期，note的有效期限從一年到十年不等，而bond的期限可超過十年。
-可卖回债券(Putable Bond):是债券持有人可以按照特定价格在债券到期日之前强制卖给债券发行人的一种特殊债券。卖回的权利是针对债券持有人而言的，也称为可回售债券。
+![](https://cdn.discordapp.com/attachments/873743101305430037/926527191443972196/2c3ff12a-1aad-413c-bcbf-f68f4a054055.jpg)
 
-新闻链接：[https://finance.yahoo.com/news/china-developers-confront-197-billion-000000114.html](https://finance.yahoo.com/news/china-developers-confront-197-billion-000000114.html)
+**校对/发稿：童谣**
 
-翻译/简评：Brianchow
+**更多资讯，更多关注**
 
-PR：Harvey（叶知秋）
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-* * *
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
