--- a/gnews/41.md
+++ b/gnews/41.md
@@ -1,7 +1,7 @@
 ---
-title: 1/5/2022 文贵直播：“中共不输出革命”是谎言，哈萨克斯坦的动乱是跟中共为伍的代价
+title: 1/5/2022 文贵直播：哈总统拒绝返还中共盗国贼的黄金，后果很严重
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1826204/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1826301/)
 
 秘密翻译组-北美组
 
