--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,9 +1,9 @@
 ---
-title: 对天地对人的敬意和爱意叫新中国联邦
+title: 1/5/2022 文贵直播：中共房地产把中国人未来58年的韭菜全割完了
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1829214/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1829262/)
 
-台灣寶島農場
+秘密翻译组-北美组
 
  
 
