--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,7 +1,7 @@
 ---
-title: 1/5/2022 文贵直播：GETTR在其他社交媒体堕落的时候上升，体现了新中国联邦在世界的话语权
+title: 1/5/2022 文贵直播：中共房地产把中国人未来58年的韭菜全割完了
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1829201/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1829262/)
 
 秘密翻译组-北美组
 
