--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 喜币的价值就在于我们战友
+title: 以敌制敌 以共灭共
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836445/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836483/)
 
 台灣寶島農場
 
