--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,7 +1,7 @@
 ---
-title: 1/07/2022 文贵直播： 纳扎尔巴耶夫事件将成为新中国联邦走向东欧的里程碑
+title: 1/07/2022 文贵直播： 中共的5步计划 拿下香港、阿富汗、南海、台湾和哈萨克斯坦
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1836746/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1836777/)
 
 秘密翻译组-北美组
 
