--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 一位医师接受辉瑞疫苗之后的警示
+title: 盖特的现况是共产党迫害我们的铁据
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1839242/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1839303/)
 
 台灣寶島農場
 
