--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,7 +1,7 @@
 ---
-title: 视频&#124; 昔日纳粹 今日共产党
+title: 视频&#124; 郭先生第一次说：一切都是刚刚开始
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1841771/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1841772/)
 
 制作：香草山视频部
 
