--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 1/09/2022 文贵直播： 疫苗的mRNA就是毒！请遵照Eglise医生的药方
+title: 1/09/2022 文贵直播： 中共在昆仑山建立了规模宏大的祭坛，属国家机密且驻扎了特种兵
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1843512/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1843606/)
 
 秘密翻译组-北美组
 
